--- a/sass/components/main/team/_team.scss
+++ b/sass/components/main/team/_team.scss
@@ -1,22 +1,28 @@
 .section-team {
-    @extend %section;
-    background-color: $second-bg-color;
+  @extend %section;
+  background-color: $second-bg-color;
 }
 
 .team__title {
-    @extend %title;
-    text-align: center;
-    margin-bottom: 50px;
+  @extend %title;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .team-list {
-    @extend %list;
-    @extend %listFlex;
+  @extend %list;
 
-    &__item {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+      flex-wrap: wrap;
+      gap: 30px;  
+  }
+  
+
+  &__item {
     background-color: $primary-white-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+      0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
     font-weight: 400;
@@ -25,29 +31,31 @@
     text-align: center;
     letter-spacing: 0.03em;
     text-align: center;
-    }
+  }
 }
 
 .team-box {
-    padding-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 24px;
+
+  @media screen and (min-width: $desktop) {
     padding-bottom: 30px;
-
-    &__subtitle {
-        margin: 0;
-        margin-bottom: 10px;
-      
-        color: $title-text-color;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.18;
-      }
-
-    &__text {
-        margin: 0;
-        margin-bottom: 16px;
-        font-size: 16px;
-        line-height: 1.18;
-      }
   }
 
+  &__subtitle {
+    margin: 0;
+    margin-bottom: 10px;
 
+    color: $title-text-color;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.18;
+  }
+
+  &__text {
+    margin: 0;
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.18;
+  }
+}
