--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 // main
 
 @import './components/sections/sections';
+@import './components/container';
 
 @import './components/page-header/page-header';
 @import './components/page-header/logo';
