--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ img {
   overflow: hidden;
 }
 
-.partner-list__link, .icon-container.feauture-box {
+.partner-list__link, .feauture-box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,21 +38,19 @@ img {
   margin-right: auto;
 }
 
-.portfolio-list, .filter-list, .location-list, .partner-list, .social-list, .team-list, .about-list, .feauture-list, .site-nav,
-.contacts {
+.portfolio-list, .filter-list, .partner-list, .social-list, .team-list, .about-list, .feauture-list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.portfolio-list, .team-list, .about-list {
+.portfolio-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.footer-container, .container {
-  width: 1200px;
+.container {
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 0px;
@@ -60,38 +58,29 @@ img {
   margin-right: auto;
 }
 
-.logo-footer, .logo {
+.logo {
+  display: inline-block;
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
+  font-size: 24px;
   color: #2196f3;
   text-decoration: none;
   line-height: 1.4;
+  font-weight: 700;
+  letter-spacing: 0.72px;
 }
 
-.site-nav__link,
-.contacts__link {
-  display: flex;
-  align-items: center;
-  padding: 32px 0;
-  fill: #757575;
-  color: #212121;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.17;
-}
-
-.button-submit, .button-subscribe, .button__primary {
+.button-submit, .button__primary {
   display: inline-block;
-  min-width: 216px;
+  min-width: 200px;
   height: 50px;
-  padding: 10px 32px;
-  border: 2px solid transparent;
+  padding: 10px 24px;
+  border: 1px solid transparent;
   border-radius: 4px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.87;
   font-weight: 700;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.96px;
   color: #ffffff;
   background-color: #2196f3;
   cursor: pointer;
@@ -99,21 +88,34 @@ img {
 }
 
 .section-team, .feauture-section, .section-about, .section-partner, .main-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section-team, .feauture-section, .section-about, .section-partner, .main-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .title, .team__title, .about__title {
   color: #212121;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
+  letter-spacing: 0.84px;
+}
+@media screen and (min-width: 1200px) {
+  .title, .team__title, .about__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
-.caption__subtitle, .subscribe-form__title, .social-block__subtitle, .feauture-box__subtitle {
+.caption__subtitle, .feauture-box__subtitle {
   margin-bottom: 0;
   margin-top: 0;
   font-weight: 700;
@@ -127,118 +129,73 @@ img {
 .section-about {
   padding-top: 0;
 }
-
-.page-header {
-  min-height: 80px;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background-color: #ffffff;
-  border-bottom: 1px solid #ececec;
+@media screen and (max-width: 1199px) {
+  .section-about {
+    display: none;
+  }
 }
 
-.header-container {
-  width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-.header-container--display {
-  display: flex;
-  align-items: center;
-}
-
-.logo > .page-header__logo--color {
-  color: #000000;
-}
-
-.main-nav {
-  margin-left: 93px;
-}
-
-.site-nav,
-.contacts {
-  display: flex;
-  gap: 50px;
-}
-
-.contacts.list {
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
-.site-nav__link,
-.contacts__link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.logo {
+  margin-right: auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
-.site-nav__link:hover, .site-nav__link:hover, .site-nav__link:focus, .site-nav__link:focus,
-.contacts__link:hover,
-.contacts__link:hover,
-.contacts__link:focus,
-.contacts__link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.contacts__link {
-  color: #757575;
-}
-
-.site-nav__link--visit {
-  position: relative;
-  color: #2196f3;
-}
-.site-nav__link--visit::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
-.icon-post,
-.icon-phone {
-  display: inline-flex;
-  align-items: center;
-  margin-right: 10px;
-  cursor: pointer;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-post .icon-post:hover,
-.icon-post .icon-post:focus,
-.icon-post .icon-phone:hover,
-.icon-post .icon-phone:focus,
-.icon-phone .icon-post:hover,
-.icon-phone .icon-post:focus,
-.icon-phone .icon-phone:hover,
-.icon-phone .icon-phone:focus {
-  fill: currentColor;
+.logo > .page-header__logo--color {
+  color: rgb(33, 33, 33);
 }
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #2f303a;
+  background-size: cover;
 }
 
 .hero__title {
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 696px;
+  max-width: 360px;
   padding: 0;
   color: #ffffff;
-  font-size: 44px;
+  font-size: 26px;
   font-weight: 900;
   line-height: 1.36;
   text-align: center;
-  letter-spacing: 0.06em;
+  letter-spacing: 1.56px;
   text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+  }
 }
 
 .overlay {
-  min-height: 600px;
+  min-height: 400px;
   max-width: 1600px;
   background-color: #c4c4c4;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/dec-pic/overlay-1.jpg);
@@ -250,7 +207,7 @@ img {
   margin-top: 30px;
   color: #ffffff;
   background-color: #2196f3;
-  border: 2px solid transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .button__primary:hover, .button__primary:focus {
   background-color: #1d86dd;
@@ -263,21 +220,35 @@ img {
 }
 
 .feauture-list {
-  display: flex;
-  flex-wrap: wrap;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
 }
+@media screen and (min-width: 768px) {
+  .feauture-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
 
 .feauture-list__item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
 }
-.feauture-list__item:not(:nth-child(4n)) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .feauture-list__item {
+    width: calc((100% - 60px) / 2);
+  }
 }
-.feauture-list__item:not(:nth-child(-n+4)) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .feauture-list__item {
+    width: calc((100% - 120px) / 4);
+  }
+}
+
+.feauture-box__subtitle {
+  text-align: center;
 }
 
 .feauture-box__text {
@@ -288,8 +259,8 @@ img {
   line-height: 1.17;
 }
 
-.icon-container.feauture-box {
-  width: 270px;
+.feauture-box {
+  width: 100%;
   height: 120px;
   background-color: #f5f4fa;
   margin-bottom: 30px;
@@ -302,6 +273,14 @@ img {
 
 .about__title {
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .about-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .about-thumb {
@@ -335,6 +314,13 @@ img {
   margin-bottom: 50px;
 }
 
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
 .team-list__item {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -349,7 +335,12 @@ img {
 
 .team-box {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .team-box {
+    padding-bottom: 30px;
+  }
 }
 .team-box__subtitle {
   margin: 0;
@@ -372,9 +363,9 @@ img {
 }
 
 .social-list__link {
-  display: inline-flex;
   width: 44px;
   height: 44px;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
@@ -418,150 +409,6 @@ img {
   fill: #2196f3;
   border: 1px solid #2196f3;
   box-shadow: none;
-}
-
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2f303a;
-}
-
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
-.logo-footer {
-  display: inline-block;
-  margin-bottom: 28px;
-}
-
-.logo-footer--color {
-  color: #ffffff;
-}
-
-.location-block {
-  display: flex;
-  flex-direction: column;
-}
-
-.location {
-  display: flex;
-  flex-direction: column;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-}
-
-.location__address {
-  display: inline-block;
-  color: #ffffff;
-  margin-bottom: 12px;
-}
-
-.footer-list__item:nth-last-child(1) {
-  margin-top: 12px;
-}
-
-.footer__contacts-link {
-  display: inline-block;
-  padding: 0px;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__contacts-link:hover, .footer__contacts-link:focus {
-  color: #2196f3;
-}
-
-.social-block {
-  margin-left: 70px;
-}
-
-.social-block__subtitle {
-  margin-bottom: 20px;
-  color: #ffffff;
-}
-
-.social-list {
-  display: inline-flex;
-  gap: 10px;
-}
-
-.social-list__link--second-color {
-  background-color: rgba(255, 255, 255, 0.1);
-  fill: #ffffff;
-  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2); */
-}
-
-.subscribe-form {
-  margin-left: auto;
-}
-
-.subscribe-form__title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #ffffff;
-  translate: border 2s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.subscribe-form__input {
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  background-color: transparent;
-  color: #ffffff;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px var(--filter-d-shadow));
-  border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.subscribe-form__input:focus {
-  border: 1px solid #2196f3;
-  outline: none;
-}
-.subscribe-form__input::-moz-placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
-  pointer-events: none;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-form__input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
-  pointer-events: none;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.button-subscribe {
-  width: 200px;
-  margin-left: 12px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  background-color: #2196f3;
-  border: 1px solid #2196f3;
-  border-radius: 4px;
-  color: #ffffff;
-  fill: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-subscribe:hover, .button-subscribe:focus {
-  background-color: #1d86dd;
-}
-.button-subscribe:active {
-  background-color: transparent;
-  color: #2196f3;
-  fill: #2196f3;
 }
 
 .filter-list {
@@ -778,7 +625,7 @@ img {
 }
 
 .form-input ~ .input-icon {
-  fill: #000000;
+  fill: rgb(33, 33, 33);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
