--- a/sass/components/main/about/_about-us.scss
+++ b/sass/components/main/about/_about-us.scss
@@ -1,36 +1,40 @@
-
 .about__title {
-    @extend %title;
-    text-align: center;
+  @extend %title;
+  text-align: center;
 }
 
-  .about-list {
-    @extend %list;
-    @extend %listFlex;
+.about-list {
+  @extend %list;
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .about-thumb {
-  position: relative;
-
-  &__text {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      margin: 0;
-    
-      width: 100%;
-      padding: 27px 0;
-      text-align: center;
-    
-      font-style: normal;
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 1.14;
-      text-align: center;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-    
-      color: $about-text-color;
-      background-color: $transparent-bgc-grey;
-    }
-}
+    position: relative;
+  
+    &__text {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+      
+        width: 100%;
+        padding: 27px 0;
+        text-align: center;
+      
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+      
+        color: $about-text-color;
+        background-color: $transparent-bgc-grey;
+      }
+  }
