--- a/sass/components/main/feautures/_feautures-icon-settings.scss
+++ b/sass/components/main/feautures/_feautures-icon-settings.scss
@@ -1,14 +1,13 @@
-.icon-container.feauture-box {
-    @extend %centeredFlex;
-    
-    width: 270px;
-    height: 120px;
-    background-color: $btn-menu-color;
-    margin-bottom: 30px;
-  }
-  
-  .feature-box__icon {
-    width: 70px;
-    height: 70px;
-  }
+.feauture-box {
+  @extend %centeredFlex;
 
+  width: 100%;
+  height: 120px;
+  background-color: $btn-menu-color;
+  margin-bottom: 30px;
+}
+
+.feature-box__icon {
+  width: 70px;
+  height: 70px;
+}
