--- a/sass/components/page-header/_logo.scss
+++ b/sass/components/page-header/_logo.scss
@@ -1,5 +1,9 @@
 .logo {
     @extend %logo;
+    margin-right: auto;
+
+    padding-top: 16px;
+    padding-bottom: 16px;
 
     &>.page-header__logo--color {
             color: $logo-color;
