--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,3 @@
-
 // colors
 
 $primary-text-color: #757575;
@@ -9,7 +8,7 @@ $hover-button-color: #1d86dd;
 $background-color: #2f303a;
 $second-bg-color: #f5f4fa;
 $bg-overlay-color: #c4c4c4;
-$logo-color: #000000;
+$logo-color: rgba(33, 33, 33, 1);
 
 $transparent-bgc-grey: rgba(47, 48, 58, 0.8);
 $transparent-bgc-blue: rgba(33, 150, 243, 0.9);
@@ -40,8 +39,12 @@ $border-color-subscribe: rgba(255, 255, 255, 0.3);
 
 $filter-d-shadow: rgba(0, 0, 0, 0.15);
 
-// gradients 
-$overlay-gradient: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+// gradients
+$overlay-gradient: linear-gradient(
+  to right,
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)
+);
 
 // fonts
 
@@ -51,3 +54,15 @@ $font-logo: "Raleway", sans-serif;
 // transitions
 
 $transition-derault: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+// breakpoints
+
+$mobile: 480px;
+
+$tablet: 768px;
+
+$desktop: 1200px;
+
+// shadows
+
+$shadow-button: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
