--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/container';
 
 @import './components/page-header/page-header';
+@import './components/page-header/menu-button';
 @import './components/page-header/logo';
 @import './components/page-header/site-nav';
 @import './components/page-header/contcts-icons';
