--- a/sass/components/main/team/_team.scss
+++ b/sass/components/main/team/_team.scss
@@ -12,8 +12,10 @@
 .team-list {
   @extend %list;
 
+
   @media screen and (min-width: $tablet) {
     display: flex;
+    justify-content: center;
       flex-wrap: wrap;
       gap: 30px;  
   }
