--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ p {
   padding: 0;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -180,39 +184,49 @@ p {
 }
 
 .page-header {
-  min-height: 60px;
-  width: 100%;
-  top: 0;
-  left: 0;
+  min-height: 80px;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
 }
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
+@media screen and (max-width: 767px) {
+  .page-header {
+    position: relative;
+    min-height: 60px;
   }
 }
-.container--display {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .page-header {
+    display: block;
+  }
 }
-
-.menu-button {
+.page-header.container {
   display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
 }
 
-.menu-button .menu-close {
+@media screen and (max-width: 767px) {
+  .menu-button {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    z-index: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
   display: none;
 }
 
-.menu-button.is-open .icon-close {
+.menu-button.is-open .icon-cross {
   display: block;
 }
 
@@ -221,7 +235,8 @@ p {
 }
 
 .logo {
-  margin-right: auto;
+  display: inline-flex;
+  align-items: center;
   padding-top: 16px;
   padding-bottom: 16px;
 }
@@ -229,25 +244,74 @@ p {
   color: rgb(33, 33, 33);
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 @media screen and (min-width: 1200px) {
   .main-nav {
-    margin-left: 93px;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
-.site-nav,
-.contacts {
-  display: flex;
-  gap: 50px;
+@media screen and (max-width: 767px) {
+  .site-nav,
+  .contacts {
+    margin: 48px 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-nav,
+  .contacts {
+    display: flex;
+    gap: 50px;
+  }
 }
 
-.contacts.list {
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__item {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .site-nav__link,
 .contacts__link {
+  display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .site-nav__link,
+  .contacts__link {
+    font-size: 40px;
+    font-weight: 500;
+    letter-spacing: 0.8px;
+  }
 }
 .site-nav__link:hover, .site-nav__link:hover, .site-nav__link:focus, .site-nav__link:focus,
 .contacts__link:hover,
@@ -260,21 +324,125 @@ p {
 
 .contacts__link {
   color: #757575;
+  display: inline-block;
+}
+@media screen and (max-width: 767px) {
+  .contacts__link {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: 34px;
+    letter-spacing: 0.68px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts__link {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 .site-nav__link--visit {
-  position: relative;
   color: #2196f3;
+  position: relative;
 }
-.site-nav__link--visit::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
+@media screen and (min-width: 768px) {
+  .site-nav__link--visit::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
+}
+
+.menu-container {
+  background-color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .menu-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: none;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: flex;
+    align-items: center;
+    gap: 96px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-container {
+    display: flex;
+    align-items: center;
+    gap: 305px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .media-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin: 64px 0 0 40px;
+    display: flex;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .media-list {
+    display: none;
+  }
+}
+
+.media-list__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.media-list__link {
+  color: #2196f3;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.36px;
+  display: inline-block;
+  text-decoration: none;
+  padding-right: 10px;
+}
+
+.icon-post,
+.icon-phone {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .icon-post,
+  .icon-phone {
+    display: none;
+  }
+}
+.icon-post .icon-post:hover,
+.icon-post .icon-post:focus,
+.icon-post .icon-phone:hover,
+.icon-post .icon-phone:focus,
+.icon-phone .icon-post:hover,
+.icon-phone .icon-post:focus,
+.icon-phone .icon-phone:hover,
+.icon-phone .icon-phone:focus {
+  fill: currentColor;
 }
 
 .hero {
@@ -853,6 +1021,8 @@ p {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+  padding: 95px 15px;
 }
 .backdrop.is-hidden {
   visibility: hidden;
@@ -861,11 +1031,7 @@ p {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
+  position: relative;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -874,6 +1040,21 @@ p {
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -25%) scale(0);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 
 .close {
@@ -888,7 +1069,6 @@ p {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50px;
 }
-
 .icon-close {
   position: absolute;
   top: 50%;
@@ -946,7 +1126,7 @@ p {
 }
 
 .form-field textarea {
-  width: 448px;
+  max-width: 100%;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -1036,9 +1216,16 @@ textarea::placeholder {
   margin-top: 20px;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.36px;
+}
+@media screen and (min-width: 1200px) {
+  .form-field.checkbox {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .button-submit {
