--- a/sass/components/modal/_submit-form.scss
+++ b/sass/components/modal/_submit-form.scss
@@ -12,21 +12,21 @@
 
   transition: opacity $transition-derault, visibility $transition-derault;
 
+  overflow-y: scroll;
+
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
   }
+
+  padding: 95px 15px;
 }
 
 // modal
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
 
-  min-width: 528px;
+.modal {
+  position: relative;
 
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -39,6 +39,21 @@
 
   .backdrop.is-hidden & {
     transform: translate(-50%, -25%) scale(0);
+  }
+
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%) scale(1);
+
+    max-width: 450px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: $desktop) {
+    max-width: 528px;
   }
 }
 
@@ -58,6 +73,9 @@
   background-color: transparent;
   border: 1px solid $backdrop-color;
   border-radius: 50px;
+
+  @media screen and (min-width: $tablet) {
+  }
 }
 
 .icon-close {
@@ -130,7 +148,7 @@
 }
 
 .form-field textarea {
-  width: 448px;
+  max-width: 100%;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -152,8 +170,8 @@
 }
 
 .form-input:focus ~ .input-icon {
-    fill: $accent-color;
-  }
+  fill: $accent-color;
+}
 
 .input-icon {
   position: absolute;
@@ -224,9 +242,15 @@ textarea::placeholder {
   margin-bottom: 30px;
 
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.36px;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .button-submit {
