--- a/sass/components/page-header/_logo.scss
+++ b/sass/components/page-header/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
     @extend %logo;
-    margin-right: auto;
+    display: inline-flex;
+    align-items: center;
 
     padding-top: 16px;
     padding-bottom: 16px;
