--- a/sass/components/page-header/_menu-button.scss
+++ b/sass/components/page-header/_menu-button.scss
@@ -1,19 +1,30 @@
 .menu-button {
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
     display: inline-flex;
     margin: 0;
     padding: 0;
     border: none;
     background-color: transparent;
+    z-index: 1;
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
 }
 
-.menu-button .menu-close {
-display: none;
+.menu-button .icon-cross {
+  display: none;
 }
 
-.menu-button.is-open .icon-close {
-    display: block;
+.menu-button.is-open .icon-cross {
+  display: block;
 }
 
 .menu-button.is-open .icon-menu {
-    display: none;
+  display: none;
 }
