--- a/sass/components/page-header/_page-header.scss
+++ b/sass/components/page-header/_page-header.scss
@@ -1,24 +1,19 @@
 .page-header {
+  @media screen and (max-width: 767px) {
+    position: relative;
     min-height: 60px;
-    width: 100%;
-    top: 0;
-    left: 0;
+  }
 
-    background-color: $primary-white-color;
-    border-bottom: 1px solid $underline-color;
-}
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
 
-.container {
+  min-height: 80px;
 
-    @media screen and (min-width:$desktop) {
-        width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-    }
+  background-color: $primary-white-color;
+  border-bottom: 1px solid $underline-color;
 
-    &--display {
-        display: flex;
-        align-items: center;
-    }
-    
+  &.container {
+    display: inline-flex;
+  }
 }
