--- a/sass/components/page-header/_site-nav.scss
+++ b/sass/components/page-header/_site-nav.scss
@@ -1,55 +1,113 @@
 .main-nav {
-    @media screen and (min-width: $desktop) {
-        margin-left: 93px; 
-    }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .site-nav,
 .contacts {
-    @extend %list;
+  @extend %list;
+
+  @media screen and (max-width: 767px) {
+    margin: 48px 40px;
+  }
+
+  @media screen and (min-width: $tablet) {
     display: flex;
     gap: 50px;
-
-
+  }
 }
 
-.contacts.list {
-    margin-left: auto;
+.contacts {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+@media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+}
+
+
+.site-nav__item {
+  @media screen and (max-width: 767px) {
+
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
+.site-nav__link {
+  @media screen and (min-width: $tablet) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .site-nav__link,
 .contacts__link {
-   @extend %nav;
+  @extend %nav;
+  display: inline-block;
 
-    transition: color $transition-derault;
+  @media screen and (max-width: 767px) {
+    font-size: 40px;
+    font-weight: 500;
+    letter-spacing: 0.8px;
+  }
 
-    &:hover,
-    &:hover,
-    &:focus,
-    &:focus {
-            color: $accent-color;
-            fill: $accent-color;
-        }
+  transition: color $transition-derault;
+
+  &:hover,
+  &:hover,
+  &:focus,
+  &:focus {
+    color: $accent-color;
+    fill: $accent-color;
+  }
 }
 
 .contacts__link {
-    color: $primary-text-color;
+  color: $primary-text-color;
+  display: inline-block;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    font-size: 34px;
+    letter-spacing: 0.68px;
+  }
+
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 .site-nav__link--visit {
-    position: relative;
-    color: $accent-color;
+  color: $accent-color;
+  position: relative;
 
-
-
+  @media screen and (min-width: $tablet) {
     &::after {
-        content: "";
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background-color: $accent-color;
-        border-radius: 2px;
-      }
+      content: "";
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background-color: $accent-color;
+      border-radius: 2px;
+    }
+  }
 }
