--- a/css/main.css
+++ b/css/main.css
@@ -213,13 +213,20 @@ body.modal-open {
     padding: 0;
     border: none;
     background-color: transparent;
-    z-index: 1;
+    z-index: 2;
   }
 }
 @media screen and (min-width: 768px) {
   .menu-button {
     display: none;
   }
+}
+
+.menu-button__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-button__icon:active {
+  fill: #2196f3;
 }
 
 .menu-button .icon-cross {
@@ -260,7 +267,8 @@ body.modal-open {
 @media screen and (max-width: 767px) {
   .site-nav,
   .contacts {
-    margin: 48px 40px;
+    margin-top: 48px;
+    margin-left: 40px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -271,6 +279,11 @@ body.modal-open {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .contacts {
+    margin-top: 40%;
+  }
+}
 @media screen and (min-width: 768px) {
   .contacts {
     display: flex;
@@ -367,11 +380,13 @@ body.modal-open {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    z-index: 1;
     display: none;
   }
   .menu-container.is-open {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 }
 @media screen and (min-width: 768px) {
@@ -394,7 +409,9 @@ body.modal-open {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin: 64px 0 0 40px;
+    margin-top: 64px;
+    margin-left: 40px;
+    margin-bottom: 48px;
     display: flex;
     gap: 10px;
   }
