--- a/sass/components/page-header/_menu.scss
+++ b/sass/components/page-header/_menu.scss
@@ -6,11 +6,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    
+    z-index: 1;
+
     display: none;
 
     &.is-open {
-      display: block;
+      display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     }
   }
 
@@ -33,7 +37,9 @@
     margin: 0;
     padding: 0;
 
-    margin: 64px 0 0 40px;
+    margin-top: 64px;
+    margin-left: 40px;
+    margin-bottom: 48px;
 
     display: flex;
     gap: 10px;
