--- a/sass/components/page-header/_site-nav.scss
+++ b/sass/components/page-header/_site-nav.scss
@@ -1,4 +1,5 @@
 .main-nav {
+
   @media screen and (min-width: $tablet) {
     display: flex;
     justify-content: space-between;
@@ -15,7 +16,8 @@
   @extend %list;
 
   @media screen and (max-width: 767px) {
-    margin: 48px 40px;
+    margin-top: 48px;
+    margin-left: 40px;
   }
 
   @media screen and (min-width: $tablet) {
@@ -25,6 +27,10 @@
 }
 
 .contacts {
+@media screen and (max-width: 767px) {
+  margin-top: 40%;
+}
+
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
