додав респонсивні зображення до секції team

--- a/css/main.css
+++ b/css/main.css
@@ -617,18 +617,11 @@ body.modal-open {
   margin-bottom: 50px;
 }
 
-@media screen and (max-width: 767px) {
-  .team-list__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .team-list {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-basis: calc((100% - 30px) / 2);
     gap: 30px;
   }
 }
@@ -641,7 +634,23 @@ body.modal-open {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    flex-basis: calc((100% - 120px) / 4);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .team-box {
