--- a/sass/components/main/hero/_hero.scss
+++ b/sass/components/main/hero/_hero.scss
@@ -5,6 +5,11 @@
   padding-bottom: 118px;
   background-color: $background-color;
   background-size: cover;
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 200px;
+  padding-bottom: 200px;
+  }
 }
 
 .hero__title {
@@ -33,14 +38,40 @@
   min-height: 400px;
   max-width: 1600px;
   background-color: $bg-overlay-color;
-  background-image: $overlay-gradient, url(../images/dec-pic/overlay-1.jpg);
+  background-image: $overlay-gradient;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 
-  @media screen and (min-device-pixel-ratio: 2), 
+  @media screen and (max-width: 767px){
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-480.jpg);
+  }
+
+  @media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), 
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-    
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-960@2x.jpg);
+  }
+
+  @media screen and (min-width: $tablet) {
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-768.jpg);
+  }
+
+  @media screen and (min-width: $tablet) and (min-device-pixel-ratio: 2), 
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-1536@2x.jpg);
+  }
+
+  @media screen and (min-width: $desktop) and (max-width: 1600px){
+    min-height: 600px;
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-1600.jpg);
+  }
+
+  @media screen and (min-width: $desktop) and (max-width: 1600px) and (min-device-pixel-ratio: 2), 
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: $overlay-gradient, url(../images/dec-pic/overlay-3200@2x.jpg);
   }
 }
 
