--- a/sass/components/main/team/_team.scss
+++ b/sass/components/main/team/_team.scss
@@ -3,6 +3,10 @@
   background-color: $second-bg-color;
 }
 
+.container.team {
+  padding: 0;
+}
+
 .team__title {
   @extend %title;
   text-align: center;
