--- a/sass/components/page-header/_site-nav.scss
+++ b/sass/components/page-header/_site-nav.scss
@@ -1,11 +1,5 @@
 .main-nav {
-
   @media screen and (min-width: $tablet) {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  @media screen and (min-width: $desktop) {
     display: flex;
     justify-content: space-between;
   }
@@ -27,27 +21,25 @@
 }
 
 .contacts {
-@media screen and (max-width: 767px) {
-  margin-top: 40%;
-}
+  @media screen and (max-width: 767px) {
+    margin-top: 40%;
+  }
 
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
     gap: 0;
-}
+  }
 
-@media screen and (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     display: flex;
     flex-direction: row;
     gap: 40px;
+  }
 }
-}
-
 
 .site-nav__item {
   @media screen and (max-width: 767px) {
-
     padding-top: 16px;
     padding-bottom: 16px;
   }
@@ -63,7 +55,7 @@
 .site-nav__link,
 .contacts__link {
   @extend %nav;
-  display: inline-block;
+  display: flex;
 
   @media screen and (max-width: 767px) {
     font-size: 40px;
@@ -84,7 +76,9 @@
 
 .contacts__link {
   color: $primary-text-color;
-  display: inline-block;
+  align-items: center;
+  line-height: normal;
+
 
   @media screen and (max-width: 767px) {
     padding-top: 16px;
@@ -97,6 +91,14 @@
   @media screen and (min-width: $tablet) and (max-width: 1199px) {
     padding-top: 5px;
     padding-bottom: 5px;
+
+    font-size: 12px;
+    letter-spacing: 0.24px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    letter-spacing: 0.28px;
   }
 }
 
