--- a/sass/components/portfolio/card-set/_cards.scss
+++ b/sass/components/portfolio/card-set/_cards.scss
@@ -1,13 +1,32 @@
 .portfolio-list {
     @extend %list;
     @extend  %listFlex;
+
+    @media screen and (max-width: 767px) {
+      justify-content: center;
+    }
 }
+
+.portfolio-list__item {
+  display: block;
+  
+  @media screen and (min-width: $tablet) {
+    display: inline-flex;
+    flex-basis: calc((100% - 1 * 30px) / 2);
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: inline-flex;
+    flex-basis: calc((100% - 2 * 30px) / 3);
+  }
+}
+
 
 .portfolio-list__link {
     display: block;
     text-decoration: none;
   
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms $transition-derault;
 
     &:hover,
     &:focus {
