--- a/css/main.css
+++ b/css/main.css
@@ -1039,13 +1039,12 @@ body.modal-open {
 }
 @media screen and (min-width: 768px) {
   .portfolio-list__item {
-    display: inline-flex;
+    display: flex;
     flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .portfolio-list__item {
-    display: inline-flex;
     flex-basis: calc((100% - 60px) / 3);
   }
 }
